--- a/public/css/user-style.css
+++ b/public/css/user-style.css
@@ -194,7 +194,7 @@ body {
   padding-right: 0 !important;
   height: 100vh;
   line-height: 1.5;
-  font-family: "SebinoRegular" !important;
+  font-family: "SebinoRegular", serif !important;
     /* font-family: "Poppins", sans-serif !important; */
 }
 
@@ -2079,6 +2079,9 @@ svg>g[class^=raphael-group-] g.raphael-group-9-plots text {
     min-width: 100px;
     height: 38px;
     padding: 9px 12px !important;
+    font-family: "Poppins", sans-serif;
+    line-height: 1.5;
+    font-weight: 600;
 }
 
 .prev-input-group .form-control:focus {
@@ -4694,9 +4697,9 @@ label.error {
     right: -7px;
     line-height: initial;
     pointer-events: none;
-    line-height: 10px;
-    font-family: "SebinoRegular" !important;
-    /* font-family: "Poppins", sans-serif !important; */
+    line-height: 1.5;
+    /* font-family: "SebinoRegular", serif !important; */
+    font-family: "Poppins", sans-serif !important;
 }
 
 .checkout-bag-count .count {
@@ -4715,7 +4718,8 @@ label.error {
     bottom: 2px;
     right: 1px;
     pointer-events: none;
-    line-height: 10px;
+    font-family: "Poppins", sans-serif !important;
+    line-height: 1.5;
 }
 
 /* Updated CSS from 08/03/2024 */
